2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Add missing prototypes.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Eliminate copies of switches to convert termios
	Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-05-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* network/network.c: Eliminate patterns that look like CVS conflict
	markers.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the
	shared framework can initialize the C Library, call
	rtems_debug_enable(), and dirty the work area memory. Until most/all
	BSPs support this new capability, if the BSP supports this, it should
	call RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION from its configure.ac.
	When the transition is complete, this autoconf macro can be removed.
